[JENKINS-70163] Use Jenkins#getProxy and ProxyConfiguration#createProxy