@@ -6,7 +6,6 @@ import org.kohsuke.accmod.Restricted;
 import org.kohsuke.accmod.restrictions.NoExternalUse;
 
 import java.io.IOException;
-import java.net.InetSocketAddress;
 import java.net.Proxy;
 import java.net.ProxySelector;
 import java.net.SocketAddress;
@@ -15,7 +14,6 @@ import java.util.Collections;
 import java.util.List;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-import java.util.regex.Pattern;
 
 @Restricted(NoExternalUse.class)
 public class JenkinsProxySelector extends ProxySelector {
@@ -24,19 +22,11 @@ public class JenkinsProxySelector extends ProxySelector {
     @Override
     public List<Proxy> select(URI uri) {
 
-        ProxyConfiguration configuration = Jenkins.get().proxy;
+        ProxyConfiguration configuration = Jenkins.get().getProxy();
         if (configuration == null) {
             return Collections.singletonList(Proxy.NO_PROXY);
         }
-
-        final String host = uri.getHost();
-        for (Pattern p : configuration.getNoProxyHostPatterns()) {
-            if (p.matcher(host).matches()) {
-                return Collections.singletonList(Proxy.NO_PROXY);
-            }
-        }
-        return Collections.singletonList(new Proxy(Proxy.Type.HTTP,
-            new InetSocketAddress(configuration.name, configuration.port)));
+        return List.of(configuration.createProxy(uri.getHost()));
     }
 
     @Override
